--- a/interfaces/Config/templates/_inc_footer_uc.tmpl
+++ b/interfaces/Config/templates/_inc_footer_uc.tmpl
@@ -1,15 +1,20 @@
     <!-- Content end -->
     <div class="clearfix"></div>
     </div>
-<script type="text/javascript">
-    function is_touch_device() {
-        return !!('ontouchstart' in window) ? 1 : 0;
-    }
-    if (is_touch_device() === 1) {
-        // touch device found
-        \$('#content').css('overflow-y', 'inherit');
-        \$('html').css('overflow-y', 'scroll');
-    }
-</script>
+    <div class="main-restarting modal-backdrop fade in" style="display: none;">
+        <strong><span class="glyphicon glyphicon-retweet"></span> $T('wizard-restarting')</strong><br />
+        <small></small>
+    </div>
+    
+    <script type="text/javascript">
+        function is_touch_device() {
+            return !!('ontouchstart' in window) ? 1 : 0;
+        }
+        if (is_touch_device() === 1) {
+            // touch device found
+            \$('#content').css('overflow-y', 'inherit');
+            \$('html').css('overflow-y', 'scroll');
+        }
+    </script>
 </body>
 </html>
