Integrating icon font Woff as Base64 into CSS for Config and Glitter
This fixes any problems that Chrome has with fonts on auth/https
connections that don't have valid certificates. Both Firefox and Chrome
use Woff font's, so only for IE it will have to download 20kb extra of
the CSS while for FF/Chrome it will lower the number of requests by 1.

--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -1987,6 +1987,11 @@ body {
     background-color: #E4E4E4;
 }
 
+.collapsing {
+    -webkit-transition: none;
+    transition: none;
+}
+
 input[type=checkbox], 
 input[type=radio] {
     margin-top: 2px;
